--- a/index.html
+++ b/index.html
@@ -1,90 +1,127 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
-<body>
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-      </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
-      </div>
-    </div>
-  </header>
-  <div class="top-wrapper">
-    <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
-      </div>
-    </div>
-  </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
-      </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
-          </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shinhye Choo</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  </head>
+  <body>
+      <header>
+        <div class="container">
+            <div class=header-left></div>
+            <span class="fa fa-bars menu-icon"></span>
+            <div class=header-right>
+            <a href="#top">TOP</a>
+            <a href="#about">ABOUT</a>
+            <a href="#stack">STACK</a>
+            <a href="#project">PROJECT</a>
+            <a href="#contact">CONTACT</a>
+            </div>
         </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
-          </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+      </header>
+      <div id="top">
+        <div class="container">
+            <h1>Shinhye Choo</h1>
         </div>
       </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
+      <div id="about">
+        <div class="container">
+            <div class="heading">
+              <h3>ABOUT</h3>
+            </div>
+            <div class="introduce">
+                <img src = "">
+                <div class="text">
+                    <p>初めてホームページを作ったのは小学生の時。何も分からないままネットでなんとなく集めた情報でエディターを使ったシンプルなサイトでした。</p>
+                    <P>その後、完全に忘れてたコーディングの世界に興味を持ち始めたのは現職でIT会社のクライアント先で働きながらです。</P>
+                    <P>頭の中にしかないことを実現させる、それが人の生活に少し嬉しさを与えるならなにより！まだまだ素人だけど、これからも少しずつ日々の変化を作って行きたいです。</P>
+                </div>
+            </div>
+        </div>
       </div>
-      <span class="btn message">さっそく開発する</span>
+      <div id="stack">
+        <div class="container">
+            <div class="heading">
+              <h3>STACK</h3>
+            </div>
+            <div class="list">
+                <div class="examples">
+                    <div class="example">
+                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
+                        <p>JAVA</p>
+                    </div>
+                    <div class="example">
+                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
+                        <p>Javascript</p>
+                    </div>
+                    <div class="example">
+                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
+                        <p>SQL</p>
+                    </div>
+                    <div class="example">
+                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
+                        <p>Node.js</p>
+                    </div>
+                    <div class="example">
+                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
+                        <p>SaSS</p>
+                    </div>
+                    <div class="example">
+                      <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
+                      <p>python</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+
+      <div id="project">
+        <div class="container">
+          <div class="heading">
+            <h3>PROJECT</h3>
+          </div>
+          <div class="projects">
+          <ul class="slides">
+            <li class="slide active"><img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/spring.jpg"></li>
+            <li class="slide"><img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/rainy.jpg"></li>
+            <li class="slide"><img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/autumn.jpg"></li>
+            <li class="slide"><img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/winter.jpg"></li>
+          </ul><br>
+        <div class="index-btn-wrapper">
+          <div class="index-btn">1</div>
+          <div class="index-btn" id="second-btn">2</div>
+          <div class="index-btn">3</div>
+          <div class="index-btn">4</div> 
+        </div>
+      </div>
     </div>
-  </div>
-  <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
-    </div>
-  </footer>
-</body>
-</html>
+      <script type="text/javascript" src="script.js"></script>
+      </div>
+      <div id="contact">
+        <div class="container">
+          <h3>CONTACT</h3>
+          <div class="contact-form">
+            <form>
+              <div class="error-message"></div>
+              <input type="text" name="name" placeholder="お名前" class="contact-name">
+              <div class="error-message"></div>
+              <input type="text" name="email" placeholder="メールアドレス" class="contact-email">
+              <div class="error-message"></div>
+              <textarea name="message" placeholder="メッセージ内容"></textarea>
+              <button type="submit" class="btn btn-contact">送信</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+            <div class="footer-center"></div>
+            <div class="link"></div>
+        </div>
+      </footer>
+  </body>
