--- a/index.html
+++ b/index.html
@@ -1,127 +1,129 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shinhye Choo</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  </head>
-  <body>
-      <header>
-        <div class="container">
-            <div class=header-left></div>
-            <span class="fa fa-bars menu-icon"></span>
-            <div class=header-right>
-            <a href="#top">TOP</a>
-            <a href="#about">ABOUT</a>
-            <a href="#stack">STACK</a>
-            <a href="#project">PROJECT</a>
-            <a href="#contact">CONTACT</a>
-            </div>
-        </div>
-      </header>
-      <div id="top">
-        <div class="container">
-            <h1>Shinhye Choo</h1>
-        </div>
-      </div>
-      <div id="about">
-        <div class="container">
-            <div class="heading">
-              <h3>ABOUT</h3>
-            </div>
-            <div class="introduce">
-                <img src = "">
-                <div class="text">
-                    <p>初めてホームページを作ったのは小学生の時。何も分からないままネットでなんとなく集めた情報でエディターを使ったシンプルなサイトでした。</p>
-                    <P>その後、完全に忘れてたコーディングの世界に興味を持ち始めたのは現職でIT会社のクライアント先で働きながらです。</P>
-                    <P>頭の中にしかないことを実現させる、それが人の生活に少し嬉しさを与えるならなにより！まだまだ素人だけど、これからも少しずつ日々の変化を作って行きたいです。</P>
-                </div>
-            </div>
-        </div>
-      </div>
-      <div id="stack">
-        <div class="container">
-            <div class="heading">
-              <h3>STACK</h3>
-            </div>
-            <div class="list">
-                <div class="examples">
-                    <div class="example">
-                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
-                        <p>JAVA</p>
-                    </div>
-                    <div class="example">
-                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
-                        <p>Javascript</p>
-                    </div>
-                    <div class="example">
-                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
-                        <p>SQL</p>
-                    </div>
-                    <div class="example">
-                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
-                        <p>Node.js</p>
-                    </div>
-                    <div class="example">
-                        <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
-                        <p>SaSS</p>
-                    </div>
-                    <div class="example">
-                      <img src="https://prog-8.com/images/html/advanced/html.png" class="example-img">
-                      <p>python</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-      </div>
 
-      <div id="project">
-        <div class="container">
-          <div class="heading">
-            <h3>PROJECT</h3>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shinhye Choo</title>
+  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="responsive.css">
+  <script src="https://kit.fontawesome.com/fd2b5ccd32.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("user_qBgrYCbTt0Z87cCnCjW59");
+    })();
+  </script>
+  <script type="text/javascript">
+    window.onload = function () {
+      document.getElementById('contact-form').addEventListener('submit', function (event) {
+        event.preventDefault();
+        // generate a five digit number for the contact_number variable
+        this.contact_number.value = Math.random() * 100000 | 0;
+        // these IDs from the previous steps
+        emailjs.sendForm('contact_service', 'contact_form', this)
+          .then(function () {
+            console.log('SUCCESS!');
+          }, function (error) {
+            console.log('FAILED...', error);
+          });
+      });
+    }
+  </script>
+
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div class=header-left></div>
+      <span class="fa fa-bars menu-icon"></span>
+      <div class=header-right>
+        <a href="#top">TOP</a>
+        <a href="#about">ABOUT</a>
+        <a href="#project">PROJECT</a>
+        <a href="#contact">CONTACT</a>
+      </div>
+    </div>
+  </header>
+
+
+  <div id="top">
+    <div class="container">
+      <img src="profile.jpg" height=200px width=150px alt="profile">
+      <h1>Shinhye Choo</h1>
+      <hr>
+      <p>Full stack Engineerを目指します</p>
+    </div>
+  </div>
+
+  <div id="about">
+    <div class="container">
+      <div class="heading">
+        <h3>ABOUT</h3>
+      </div>
+      <div class="introduce">
+        <div class="catch">
+          <p></p>
+        </div>
+        <div class="points">
+          <div class="point">
+            <h4>コミュニケーション</h4>
+            <i class="fas fa-comments fa-2x"></i>
+            <p></p>
           </div>
-          <div class="projects">
-          <ul class="slides">
-            <li class="slide active"><img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/spring.jpg"></li>
-            <li class="slide"><img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/rainy.jpg"></li>
-            <li class="slide"><img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/autumn.jpg"></li>
-            <li class="slide"><img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/winter.jpg"></li>
-          </ul><br>
-        <div class="index-btn-wrapper">
-          <div class="index-btn">1</div>
-          <div class="index-btn" id="second-btn">2</div>
-          <div class="index-btn">3</div>
-          <div class="index-btn">4</div> 
+          <div class="point">
+            <h4>コツコツ</h4>
+            <i class="fas fa-infinity fa-2x"></i>
+            <p></p>
+          </div>
+          <div class="point">
+            <h4>成長</h4>
+            <i class="fas fa-seedling fa-2x"></i>
+            <p></p>
+          </div>
         </div>
       </div>
     </div>
-      <script type="text/javascript" src="script.js"></script>
+  </div>
+  </div>
+
+  <div id="project">
+    <div class="container">
+      <div class="heading">
+        <h3>PROJECT</h3>
       </div>
-      <div id="contact">
-        <div class="container">
-          <h3>CONTACT</h3>
-          <div class="contact-form">
-            <form>
-              <div class="error-message"></div>
-              <input type="text" name="name" placeholder="お名前" class="contact-name">
-              <div class="error-message"></div>
-              <input type="text" name="email" placeholder="メールアドレス" class="contact-email">
-              <div class="error-message"></div>
-              <textarea name="message" placeholder="メッセージ内容"></textarea>
-              <button type="submit" class="btn btn-contact">送信</button>
-            </form>
-          </div>
-        </div>
+      <div class="projects">
+        <td></td>
       </div>
-      <footer>
-        <div class="container">
-            <div class="footer-center"></div>
-            <div class="link"></div>
-        </div>
-      </footer>
-  </body>
+    </div>
+  </div>
+
+
+  <div id="contact">
+    <div class="container">
+      <h3>CONTACT</h3>
+      <div class="contact-form">
+        <form id="contact-form">
+          <input type="hidden" name="contact_number">
+          <label>Name</label>
+          <input type="text" name="user_name">
+          <label>Email</label>
+          <input type="email" name="user_email">
+          <label>Message</label>
+          <textarea name="message"></textarea>
+          <input type="submit" value="Send">
+        </form>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="container">
+      <div class="footer-center fa-lg">
+        <i class="far fa-envelope fa-lg"></i>
+        <i class="fab fa-github fa-lg"></i>
+        <i class="fab fa-linkedin-in fa-lg"></i>
+      </div>
+    </div>
+  </footer>
+</body>
