--- a/index.html
+++ b/index.html
@@ -36,21 +36,20 @@
 <body>
   <header>
     <div class="container">
-      <div class=header-left></div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class=header-right>
+      <div class=nav>
         <a href="#top">TOP</a>
         <a href="#about">ABOUT</a>
         <a href="#project">PROJECT</a>
         <a href="#contact">CONTACT</a>
       </div>
+      <span class="fa fa-bars menu-icon"></span>
     </div>
   </header>
 
 
   <div id="top">
     <div class="container">
-      <img src="profile.jpg" height=200px width=150px alt="profile">
+      <img src="img/profile.jpg" height=200px width=150px alt="profile">
       <h1>Shinhye Choo</h1>
       <hr>
       <p>Full stack Engineerを目指します</p>
@@ -94,7 +93,31 @@
         <h3>PROJECT</h3>
       </div>
       <div class="projects">
-        <td></td>
+        <div class="project">
+          <img src="img/1.jpg" alt="javascript">
+          <p>javascript</p>
+        </div>
+        <div class="project">
+          <img src="img/2.jpg" alt="javascript&Firebase">
+          <p>javascript & Firebase</p>
+        </div>
+        <div class="project">
+          <img src="img/3.jpg" alt="React">
+          <p>React</p>
+        </div>
+        <div class="project">
+          <img src="img/4.jpg" alt="React&Firebase">
+          <img src="img/5.jpg" alt="React&Firebase">
+          <p>React & Firebase</p>
+        </div>
+        <div class="project">
+          <img src="img/6.jpg" alt="PHP">
+          <p>PHP</p>
+        </div>
+        <div class="project">
+          <img src="img/7.jpg" alt="PHP&javascript">
+          <p>PHP & javascript</p>
+        </div>
       </div>
     </div>
   </div>
@@ -107,9 +130,9 @@
         <form id="contact-form">
           <input type="hidden" name="contact_number">
           <label>Name</label>
-          <input type="text" name="user_name">
+          <input type="text" name="user_name"><br>
           <label>Email</label>
-          <input type="email" name="user_email">
+          <input type="email" name="user_email"><br>
           <label>Message</label>
           <textarea name="message"></textarea>
           <input type="submit" value="Send">
