--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/fd2b5ccd32.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-  <link rel="stylesheet" href="./css/jquery.jdSlider.css">
+  <!-- <link rel="stylesheet" href="./css/jquery.jdSlider.css">
   <script src="/path/to/cdn/jquery.slim.min.js"></script>
   <script src="./js/jquery.jdSlider-latest.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
   <script type="text/javascript">
     (function () {
       emailjs.init("user_qBgrYCbTt0Z87cCnCjW59");
@@ -54,12 +54,12 @@
 
   <div id="top">
     <div class="container">
-      <div data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-        <img src="img/profile.jpg" height=200px width=150px alt="profile">
-        <h1>Shinhye Choo</h1>
-        <hr>
-        <p>Full stack Engineerを目指します</p>
-      </div>
+      <!-- <div data-aos="fade-up" data-aos-anchor-placement="top-bottom"> -->
+      <img src="img/profile.jpg" height=200px width=150px alt="profile">
+      <h1>Shinhye Choo</h1>
+      <hr>
+      <p>Full stack Engineerを目指します</p>
+      <!-- </div> -->
     </div>
   </div>
 
@@ -101,7 +101,7 @@
       </div>
       <div class="projects">
 
-        <section class="jd-slider example">
+        <section class="jd-slider">
           <div class="slide-inner">
             <ul class="slide-area">
               <li>
@@ -109,10 +109,12 @@
                 <p>javascript</p>
               </li>
               <li>
-                Slide 2
+                <img src="img/2.jpg" alt="javascript&Firebase">
+                <p>javascript & Firebase</p>
               </li>
               <li>
-                Slide 3
+                <img src="img/3.jpg" alt="React">
+                <p>React</p>
               </li>
             </ul>
           </div>
