--- a/index.html
+++ b/index.html
@@ -116,7 +116,23 @@
                 <img src="img/3.jpg" alt="React">
                 <p>React</p>
               </li>
+              <li>
+                <img src="img/4.jpg" alt="React&Firebase">
+                <img src="img/5.jpg" alt="React&Firebase">
+                <p>React & Firebase</p>
+              </li>
+              <li>
+                <img src="img/6.jpg" alt="PHP">
+                <p>PHP</p>
+              </li>
+              <li>
+                <div class="project">
+                  <img src="img/7.jpg" alt="PHP&javascript">
+                  <p>PHP & javascript</p>
+                </div>
+              </li>
             </ul>
+
           </div>
           <a class="prev" href="#">
             <i class="fas fa-angle-left fa-2x"></i>
@@ -130,7 +146,7 @@
         </section>
 
 
-        <div class="project">
+        <!-- <div class="project">
           <img src="img/1.jpg" alt="javascript">
           <p>javascript</p>
         </div>
@@ -155,40 +171,40 @@
           <img src="img/7.jpg" alt="PHP&javascript">
           <p>PHP & javascript</p>
         </div>
+      </div> -->
       </div>
     </div>
-  </div>
 
 
-  <div id="contact">
-    <div class="container">
-      <h3>CONTACT</h3>
-      <div class="contact-form">
-        <form id="contact-form">
-          <input type="hidden" name="contact_number">
-          <p>
-            <label>Name</label>
-            <input type="text" name="user_name">
-          </p>
-          <p><label>Email</label>
-            <input type="email" name="user_email">
-          </p>
-          <p><label>Message</label>
-            <textarea name="message"></textarea>
-          </p>
-          <input type="submit" value="Send">
-        </form>
+    <div id="contact">
+      <div class="container">
+        <h3>CONTACT</h3>
+        <div class="contact-form">
+          <form id="contact-form">
+            <input type="hidden" name="contact_number">
+            <p>
+              <label>Name</label>
+              <input type="text" name="user_name">
+            </p>
+            <p><label>Email</label>
+              <input type="email" name="user_email">
+            </p>
+            <p><label>Message</label>
+              <textarea name="message"></textarea>
+            </p>
+            <input type="submit" value="Send">
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-  <footer>
-    <div class="container">
-      <div class="footer-center fa-lg">
-        <a href="mailto:chooshinhye@gmail.com"><i class="far fa-envelope fa-lg"></i></a>
-        <a href="http://github.com/skysee6126" target="_blank"><i class="fab fa-github fa-lg"></i></a>
-        <i class="fab fa-linkedin-in fa-lg"></i>
+    <footer>
+      <div class="container">
+        <div class="footer-center fa-lg">
+          <a href="mailto:chooshinhye@gmail.com"><i class="far fa-envelope fa-lg"></i></a>
+          <a href="http://github.com/skysee6126" target="_blank"><i class="fab fa-github fa-lg"></i></a>
+          <i class="fab fa-linkedin-in fa-lg"></i>
+        </div>
       </div>
-    </div>
-  </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
