update project part

--- a/index.html
+++ b/index.html
@@ -100,7 +100,44 @@
         <h3>PROJECT</h3>
       </div>
       <div class="projects">
-
+        <div class="slide_wrap">
+          <div class="slide_box">
+            <div class="slide_list clearfix">
+              <div class="slide_content slide01">
+                <img src="img/1.jpg" alt="">
+                <p>1</p>
+              </div>
+              <div class="slide_content slide02">
+                <img src="img/2.jpg" alt="">
+                <p>2</p>
+              </div>
+              <div class="slide_content slide03">
+                <img src="img/3.jpg" alt="React">
+                <p>3</p>
+              </div>
+              <div class="slide_content slide04">
+                <!-- <img src="img/4.jpg" alt="React&Firebase"> -->
+                <img src="img/5.jpg" alt="React&Firebase">
+                <p>4</p>
+              </div>
+              <div class="slide_content slide05">
+                <img src="img/6.jpg" alt="PHP">
+                <p>5</p>
+              </div>
+            </div>
+            <!-- // .slide_list -->
+          </div>
+          <!-- // .slide_box -->
+          <div class="slide_btn_box">
+            <button type="button" class="slide_btn_prev">Prev</button>
+            <button type="button" class="slide_btn_next">Next</button>
+          </div>
+          <!-- // .slide_btn_box -->
+          <ul class="slide_pagination"></ul>
+          <!-- // .slide_pagination -->
+        </div>
+        <!-- // .slide_wrap -->
+        <!--         
         <section class="jd-slider">
           <div class="slide-inner">
             <ul class="slide-area">
@@ -144,34 +181,7 @@
             <div class="indicate-area"></div>
           </div>
         </section>
-
-
-        <!-- <div class="project">
-          <img src="img/1.jpg" alt="javascript">
-          <p>javascript</p>
-        </div>
-        <div class="project">
-          <img src="img/2.jpg" alt="javascript&Firebase">
-          <p>javascript & Firebase</p>
-        </div>
-        <div class="project">
-          <img src="img/3.jpg" alt="React">
-          <p>React</p>
-        </div>
-        <div class="project">
-          <img src="img/4.jpg" alt="React&Firebase">
-          <img src="img/5.jpg" alt="React&Firebase">
-          <p>React & Firebase</p>
-        </div>
-        <div class="project">
-          <img src="img/6.jpg" alt="PHP">
-          <p>PHP</p>
-        </div>
-        <div class="project">
-          <img src="img/7.jpg" alt="PHP&javascript">
-          <p>PHP & javascript</p>
-        </div>
-      </div> -->
+ -->
       </div>
     </div>
 
