modified project part

--- a/index.html
+++ b/index.html
@@ -99,122 +99,62 @@
       <div class="heading">
         <h3>PROJECT</h3>
       </div>
-      <div class="projects">
+      <div id="projects">
         <div class="slide_wrap">
           <div class="slide_box">
-            <div class="slide_list clearfix">
-              <div class="slide_content slide01">
-                <img src="img/1.jpg" alt="">
-                <p>1</p>
-              </div>
-              <div class="slide_content slide02">
-                <img src="img/2.jpg" alt="">
-                <p>2</p>
-              </div>
-              <div class="slide_content slide03">
-                <img src="img/3.jpg" alt="React">
-                <p>3</p>
-              </div>
-              <div class="slide_content slide04">
-                <!-- <img src="img/4.jpg" alt="React&Firebase"> -->
-                <img src="img/5.jpg" alt="React&Firebase">
-                <p>4</p>
-              </div>
-              <div class="slide_content slide05">
-                <img src="img/6.jpg" alt="PHP">
-                <p>5</p>
-              </div>
+            <div class="slide_list">
+              <img id="lastClone" src="img/6.jpg" alt="PHP">
+              <img src="img/1.jpg" alt="javascript">
+              <img src="img/2.jpg" alt="javascript&Firebase">
+              <img src="img/3.jpg" alt="React">
+              <img src="img/5.jpg" alt="React&Firebase">
+              <img src="img/6.jpg" alt="PHP">
+              <img id="firstClone" src="img/1.jpg" alt="javascript">
             </div>
             <!-- // .slide_list -->
           </div>
           <!-- // .slide_box -->
           <div class="slide_btn_box">
-            <button type="button" class="slide_btn_prev">Prev</button>
-            <button type="button" class="slide_btn_next">Next</button>
+            <button type="button" class="fas fa-angle-left fa-2x"></button>
+            <button type="button" class="fas fa-angle-right fa-2x"></button>
           </div>
           <!-- // .slide_btn_box -->
-          <ul class="slide_pagination"></ul>
-          <!-- // .slide_pagination -->
         </div>
         <!-- // .slide_wrap -->
-        <!--         
-        <section class="jd-slider">
-          <div class="slide-inner">
-            <ul class="slide-area">
-              <li>
-                <img src="img/1.jpg" alt="javascript">
-                <p>javascript</p>
-              </li>
-              <li>
-                <img src="img/2.jpg" alt="javascript&Firebase">
-                <p>javascript & Firebase</p>
-              </li>
-              <li>
-                <img src="img/3.jpg" alt="React">
-                <p>React</p>
-              </li>
-              <li>
-                <img src="img/4.jpg" alt="React&Firebase">
-                <img src="img/5.jpg" alt="React&Firebase">
-                <p>React & Firebase</p>
-              </li>
-              <li>
-                <img src="img/6.jpg" alt="PHP">
-                <p>PHP</p>
-              </li>
-              <li>
-                <div class="project">
-                  <img src="img/7.jpg" alt="PHP&javascript">
-                  <p>PHP & javascript</p>
-                </div>
-              </li>
-            </ul>
-
-          </div>
-          <a class="prev" href="#">
-            <i class="fas fa-angle-left fa-2x"></i>
-          </a>
-          <a class="next" href="#">
-            <i class="fas fa-angle-right fa-2x"></i>
-          </a>
-          <div class="controller">
-            <div class="indicate-area"></div>
-          </div>
-        </section>
- -->
       </div>
     </div>
+  </div>
 
 
-    <div id="contact">
-      <div class="container">
-        <h3>CONTACT</h3>
-        <div class="contact-form">
-          <form id="contact-form">
-            <input type="hidden" name="contact_number">
-            <p>
-              <label>Name</label>
-              <input type="text" name="user_name">
-            </p>
-            <p><label>Email</label>
-              <input type="email" name="user_email">
-            </p>
-            <p><label>Message</label>
-              <textarea name="message"></textarea>
-            </p>
-            <input type="submit" value="Send">
-          </form>
-        </div>
+  <div id="contact">
+    <div class="container">
+      <h3>CONTACT</h3>
+      <div class="contact-form">
+        <form id="contact-form">
+          <input type="hidden" name="contact_number">
+          <p>
+            <label>Name</label>
+            <input type="text" name="user_name">
+          </p>
+          <p><label>Email</label>
+            <input type="email" name="user_email">
+          </p>
+          <p><label>Message</label>
+            <textarea name="message"></textarea>
+          </p>
+          <input type="submit" value="Send">
+        </form>
       </div>
     </div>
-    <footer>
-      <div class="container">
-        <div class="footer-center fa-lg">
-          <a href="mailto:chooshinhye@gmail.com"><i class="far fa-envelope fa-lg"></i></a>
-          <a href="http://github.com/skysee6126" target="_blank"><i class="fab fa-github fa-lg"></i></a>
-          <i class="fab fa-linkedin-in fa-lg"></i>
-        </div>
+  </div>
+  <footer>
+    <div class="container">
+      <div class="footer-center fa-lg">
+        <a href="mailto:chooshinhye@gmail.com"><i class="far fa-envelope fa-lg"></i></a>
+        <a href="http://github.com/skysee6126" target="_blank"><i class="fab fa-github fa-lg"></i></a>
+        <i class="fab fa-linkedin-in fa-lg"></i>
       </div>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    </div>
+  </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
