--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/fd2b5ccd32.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-  <!-- <link rel="stylesheet" href="./css/jquery.jdSlider.css">
-  <script src="/path/to/cdn/jquery.slim.min.js"></script>
-  <script src="./js/jquery.jdSlider-latest.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
   <script type="text/javascript">
     (function () {
       emailjs.init("user_qBgrYCbTt0Z87cCnCjW59");
@@ -47,7 +43,7 @@
         <a href="#project">PROJECT</a>
         <a href="#contact">CONTACT</a>
       </div>
-      <span class="fa fa-bars menu-icon"></span>
+      <span class="fa fa-bars menu-icon" id=menu></span>
     </div>
   </header>
 
@@ -115,8 +111,8 @@
           </div>
           <!-- // .slide_box -->
           <div class="slide_btn_box">
-            <button type="button" class="fas fa-angle-left fa-2x"></button>
-            <button type="button" class="fas fa-angle-right fa-2x"></button>
+            <button type="button" class="btn fas fa-angle-left fa-2x"></button>
+            <button type="button" class="btn fas fa-angle-right fa-2x"></button>
           </div>
           <!-- // .slide_btn_box -->
         </div>
@@ -142,7 +138,7 @@
           <p><label>Message</label>
             <textarea name="message"></textarea>
           </p>
-          <input type="submit" value="Send">
+          <input type="submit" id="btn_send" value="Send">
         </form>
       </div>
     </div>
@@ -157,4 +153,5 @@
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="script.js"></script>
 </body>
