--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 </head>
 
 <body>
+
+  <body style="overflow-x: hidden"></body>
+
+
   <header>
     <div class="container">
       <div class=nav>
@@ -50,12 +54,10 @@
 
   <div id="top">
     <div class="container">
-      <!-- <div data-aos="fade-up" data-aos-anchor-placement="top-bottom"> -->
       <img src="img/profile.jpg" height=200px width=150px alt="profile">
-      <h1>Shinhye Choo</h1>
+      <h1 class="profile_name">Shinhye Choo</h1>
       <hr>
       <p>Full stack Engineerを目指します</p>
-      <!-- </div> -->
     </div>
   </div>
 
