modified project part

--- a/index.html
+++ b/index.html
@@ -101,13 +101,19 @@
         <div class="slide_wrap">
           <div class="slide_box">
             <div class="slide_list">
-              <img id="lastClone" src="img/6.jpg" alt="PHP">
               <img src="img/1.jpg" alt="javascript">
+            </div>
+            <div class="slide_list">
               <img src="img/2.jpg" alt="javascript&Firebase">
+            </div>
+            <div class="slide_list">
               <img src="img/3.jpg" alt="React">
+            </div>
+            <div class="slide_list">
               <img src="img/5.jpg" alt="React&Firebase">
+            </div>
+            <div class="slide_list">
               <img src="img/6.jpg" alt="PHP">
-              <img id="firstClone" src="img/1.jpg" alt="javascript">
             </div>
             <!-- // .slide_list -->
           </div>
