--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
   <header>
     <div class="container">
+      <span class="fa fa-bars menu-icon" id=menu></span>
       <div class=nav>
         <a href="#top">TOP</a>
         <a href="#about">ABOUT</a>
         <a href="#project">PROJECT</a>
         <a href="#contact">CONTACT</a>
       </div>
-      <span class="fa fa-bars menu-icon" id=menu></span>
     </div>
   </header>
 
@@ -124,7 +124,9 @@
 
   <div id="contact">
     <div class="container">
-      <h3>CONTACT</h3>
+      <div class="heading">
+        <h3>CONTACT</h3>
+      </div>
       <div class="contact-form">
         <form id="contact-form">
           <input type="hidden" name="contact_number">
@@ -143,6 +145,8 @@
       </div>
     </div>
   </div>
+
+
   <footer>
     <div class="container">
       <div class="footer-center fa-lg">
